# sabi-nes

./: .gitattributes  .gitignore  CREDITS.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
docs/superpowers/specs/: 2026-03-21-apu-channels-refactor-design.md
examples/: snake_game.rs  tile_viewer.rs
sabi-nes/: Cargo.toml
sabi-nes-app/: Cargo.toml
sabi-nes-app/src/: config.rs  main.rs
sabi-nes-core/: Cargo.toml
sabi-nes-core/src/: bus.rs  cpu.rs  emulator.rs  frontend.rs  lib.rs  ppu.rs  primitives.rs  render.rs  utils.rs
sabi-nes-core/src/apu/: channels.rs  frame_counter.rs
sabi-nes-core/src/apu/channels/: dmc.rs  envelope.rs  square_channel.rs  triangle_channel.rs
sabi-nes-core/src/cartridge/: mappers.rs  rom.rs
sabi-nes-core/src/cartridge/mappers/: mmc1.rs  nrom.rs
sabi-nes-core/src/cpu/: addressing_mode.rs  interrupts.rs  memory.rs  stack_pointer.rs  status_register.rs
sabi-nes-core/src/input/: joypad.rs
sabi-nes-core/src/ppu/: open_bus.rs
sabi-nes-core/src/ppu/registers/: mask.rs  status.rs
sabi-nes-core/src/render/: chr_tile.rs  palettes.rs  tile_palette.rs
sabi-nes-core/tests/: accuracy_coin.rs  common.rs  nestest.rs
sabi-nes-core/tests/test_roms/: AccuracyCoin.asm
sabi-nes-sdl/: Cargo.toml
sabi-nes-sdl/src/: emulator.rs  frontend.rs  main.rs
sabi-nes-wasm/: Cargo.toml  index.html  main.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
sabi-nes-wasm/src/: lib.rs
sabi-nes/examples/: snake_game.rs  tile_viewer.rs
sabi-nes/src/: bus.rs  lib.rs  utils.rs
sabi-nes/src/apu/channels/: noise_channel.rs  triangle_channel.rs
sabi-nes/src/cartridge/: mirroring_type.rs  rom.rs
sabi-nes/src/cpu/: memory.rs  mod.rs  opcodes.rs  stack_pointer.rs  status_register.rs
sabi-nes/src/input/: joypad.rs
sabi-nes/src/ppu/: mod.rs  nmi_status.rs
sabi-nes/src/ppu/registers/: control.rs  mask.rs  mod.rs  oam.rs  status.rs
sabi-nes/src/render/: bg_tile.rs  frame.rs  mod.rs  palettes.rs  viewport.rs
sabi-nes/tests/: nestest.rs
sabi-nes/tests/common/: mod.rs
src/: apu.rs  bus.rs  config.rs  cpu.rs  emulator.rs  frontend.rs  interrupts.rs  lib.rs  main.rs  ppu.rs  primitives.rs  render.rs  sdl_frontend.rs  utils.rs
src/apu/: apu_flags.rs  channels.rs  frame_counter.rs  mod.rs
src/apu/channels/: common.rs  dmc.rs  envelope.rs  noise_channel.rs  square_channel.rs  triangle_channel.rs
src/cartridge/: mappers.rs  mod.rs  rom.rs
src/cartridge/mappers/: mmc1.rs  mod.rs  nrom.rs
src/cpu/: addressing_mode.rs  interrupts.rs  memory.rs  mod.rs  opcodes.rs  stack_pointer.rs  status_flags.rs  status_register.rs
src/input/: joypad.rs
src/ppu/: mod.rs  registers.rs
src/ppu/registers/: address.rs  control.rs  control_register.rs  mask.rs  mod.rs  oam.rs  scroll.rs  status.rs
src/render/: bg_tile.rs  frame.rs  mod.rs  palettes.rs  tile_palette.rs  viewport.rs
tests/: accuracy_coin.rs  common.rs  nestest.rs
tests/common/: mod.rs
tests/test_data/: accuracy_coin_test_cases.csv
tests/test_roms/: AccuracyCoin.nes
