[package]
name = "sabi-nes"
version = "0.1.0"
edition = "2024"
description = "A toy NES emulator"
authors = ["Dariusz Dajka <dariusz.dajka@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "~1.0.97"
bitflags = "~2.9.0"
clap = { version = "~4.5.31", features = ["derive"] }
maplit = "~1.0.2"
once_cell = "~1.20.3"
sdl2 = "~0.37.0"

[dev-dependencies]
assert_matches = "~1.5.0"
pretty_assertions = "~1.4.1"
rand = "~0.9.0"
