[package]
name = "sabi-nes"
version = "0.1.0"
edition = "2024"
description = "A toy NES emulator"
authors = ["Dariusz Dajka <dariusz.dajka@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "~1.0.97"
bitflags = "~2.11.0"
clap = { version = "~4.6.0", features = ["derive"] }
derive_more = { version = "~2.1.1", features = ["full"] } # TODO - only use features we need
env_logger = "~0.11.9"
log = "~0.4.29"
maplit = "~1.0.2"
once_cell = "~1.21.3"
sdl2 = "~0.38.0"

[dev-dependencies]
assert_matches = "~1.5.0"
csv = "~1.4.0"
pretty_assertions = "~1.4.1"
rand = "~0.10.0"
serde = { version = "~1.0.228", features = ["derive"] }

[lints.clippy]
cast_sign_loss = "warn"
match_bool = "warn"
redundant_closure_for_method_calls = "warn"
enum_glob_use = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
wildcard_imports = "warn"
new_without_default = "allow"
