[profile.dev]
opt-level = 1

[workspace]
resolver = "3"
members = [
    "sabi-nes-core",
    "sabi-nes-sdl",
    "sabi-nes-wasm",
]

[workspace.package]
edition = "2024"
name = "sabi-nes"
description = "A toy NES emulator"
authors = ["Dariusz Dajka <dariusz.dajka@proton.me"]
license = "MIT"
repository = "https://github.com/isenar/sabi-nes"

[workspace.dependencies]
anyhow = "~1.0.97"
bitflags = "~2.11.0"
clap = "~4.6.0"
console_error_panic_hook = "~0.1.7"
console_log = "~1.0.0"
derive_more = "~2.1.1"
env_logger = "~0.11.9"
log = "~0.4.29"
maplit = "~1.0.2"
once_cell = "~1.21.3"
sdl2 = "~0.38.0"
wasm-bindgen = "~0.2.118"
web-sys = "~0.3.95"

# dev-dependencies
assert_matches = "~1.5.0"
csv = "~1.4.0"
pretty_assertions = "~1.4.1"
rand = "~0.10.0"
serde = "~1.0.228"

[workspace.lints.clippy]
cast_sign_loss = "warn"
match_bool = "allow"
redundant_closure_for_method_calls = "warn"
enum_glob_use = "warn"
needless_pass_by_value = "warn"
semicolon_if_nothing_returned = "warn"
wildcard_imports = "warn"
new_without_default = "allow"
