[package]
name = "sabi-nes-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sabi-nes = { path = "../sabi-nes" }
once_cell = "1.10.0"
sdl2 = "0.35.2"
structopt = "0.3.26"
clap = { version = "4.0.8", features = ["derive"] }
maplit = "1.0.2"
