[package]
name = "sabi-nes-core"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
log = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
csv = { workspace = true }
pretty_assertions = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[lints]
workspace = true