[package]
name = "sabi-nes-wasm"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "TODO"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
sabi-nes-core = { path = "../sabi-nes-core" }
wasm-bindgen = { workspace = true }
web-sys = { workspace = true, features = [
    "CanvasRenderingContext2d",
    "Document",
    "HtmlCanvasElement",
    "ImageData",
    "Window",
] }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
